Fix issue with search model cutting off

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,9 +9,8 @@ html, body {
 }
 body.no-scroll {
   overflow: hidden;
-  height: 100vh;
-  position: fixed;
-  width: 100%;
+  touch-action: none;
+  overscroll-behavior: contain;
 }
 
 /* ================= ASSESSMENT TOOL ================= */
@@ -2672,7 +2671,7 @@ main {
 
   .notification-dropdown {
     position: fixed ;
-    top: 63px;
+    top: 65px;
     left: 0;
     width: 100vw ;
     max-width: 100vw ;
@@ -3061,6 +3060,7 @@ main {
   font-weight: 600;
   color: white;
   background: linear-gradient(90deg, #10b981, #059669);
+  margin-top: 15px;
 }
 
 .checkout-btn:hover {
@@ -3948,16 +3948,16 @@ main {
   display: flex;
   justify-content: center;
   align-items: start;
-  padding-top: 66px;
+  padding-top: 65px;
 }
 
 .search-box {
-  position: relative;
+  position: static;
   background-color: #0f172a;
   border: 1px solid #334155;
   border-radius: 8px;
   width: 100%;
-  max-width: 600px;
+  max-width: 900px;
   padding: 16px;
   z-index: 101;
 }
@@ -4004,7 +4004,7 @@ main {
 
 
 .results {
-  /* margin-top: 12px; */
+  padding-top: 10px;
   max-height: 400px;
   overflow-y: auto;
   font-size: 18px;
@@ -4102,6 +4102,12 @@ main {
 
 .icon {
   font-size: 20px;
+}
+@media(max-width: 900px){
+  .search-box{
+    height: 100%;
+  }
+ 
 }
 
 @media(max-width: 600px){
@@ -4208,6 +4214,7 @@ main {
   font-weight: 700;
   color: white;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .svc-list {
@@ -4501,7 +4508,9 @@ main {
     display: none !important;
   }
   .svc-group-heading {
-    margin-top: 0 ;
+    margin-top: 20px ;
+    margin-bottom: 1rem;
+
   }
 }
 
@@ -4599,7 +4608,7 @@ main {
   right: 0;
   bottom: 0;
   background: rgba(0,0,0,0.45);
-  z-index: 10000 !important;
+  /* z-index: 10000 !important; */
   display: flex;
   justify-content: flex-end;
 }
@@ -4615,7 +4624,7 @@ main {
   color: white;
   padding: 1.5rem 1.5rem 3rem 1.5rem;
   border-left: 1px solid rgba(255,255,255,0.1);
-  z-index: 10001 !important;
+  /* z-index: 10001 !important; */
 }
 
 
@@ -8280,6 +8289,9 @@ details[open] .faq-toggle {
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
   text-align: center;
 }
+.login-box input{
+  width: 100%;
+}
 
 .login-title {
   color: #fff;
@@ -8410,12 +8422,13 @@ details[open] .faq-toggle {
 @media (max-width: 600px) {
   .login-box,
   .login-back-container {
-    max-width: 260px;
+    max-width: 350px;
     width: 100%;
   }
 
   .login-wrapper {
     padding: 30px 12px;
+    padding-top: 6rem;
   }
 }
 
